--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #7DDEFF;
+  background: url('../img/mooning.png');
   margin-top: 20px;
 }
 
@@ -42,6 +42,5 @@ a {
 }
 
 a:hover {
-  background-color: #C1F2BB;
   text-decoration: none;
 }
